--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@
     background-color: transparent;
 }
 
+.logo{
+  height: 90px;
+}
+
+.nav-item{
+  font-size: 20px;
+}
+
 .form-control {
     background-color: rgba(255, 255, 255, 0.438);
 }
@@ -18,7 +26,7 @@
 #scene {
     overflow: hidden;
     position: relative;
-    margin: -56px 0 0 0;
+    margin: -117px 0 0 0;
     padding: 0;
     background-size: contain;
     height: 100vh;
