--- a/style.css
+++ b/style.css
@@ -27,6 +27,24 @@
     background-color: rgba(255, 255, 255, 0.438);
 }
 
+h1{
+ text-align: center;
+ margin: -30px 0 70px 0;
+ font-family: 'Segoe UI';
+ color: white;
+ font-weight: 100;
+ font-size: 55px;
+ letter-spacing: 12px;
+}
+
+h1 span{
+  transition: all 1s;
+}
+
+h1 span:hover{
+color: rgba(255, 255, 255, 0);
+}
+
 #scene {
     overflow: hidden;
     position: relative;
