--- a/style.css
+++ b/style.css
@@ -1,248 +1,387 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.navig {
+  height: 75px;
+}
+
+#navbar_fixed {
+  z-index: 10000;
+  background-color: rgb(255, 255, 255);
+}
+
+.shadow{
+  box-shadow: rgb(168, 168, 168) 0px 0px 10px;
 }
 
 .navbar {
-    width: 100%;
-    position: relative;
-    z-index: 1000;
-    background-color: transparent;
+  width: 100%;
+  position: relative;
+  z-index: 1000;
+  background-color: transparent;
 }
 
-.navbar li{
+.navbar li {
   margin: 0 1vw;
+  font-family: roboto condensed;
 }
 
-.logo{
-  height: 90px;
+.sticky {
+  position: fixed;
+  top: 0;
 }
 
-.nav-item{
+.navbar a {
+  position: relative;
+}
+
+.navbar a::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  display: block;
+  margin-top: 1px;
+  right: 0;
+  background: rgb(145, 145, 145);
+  transition: width .6s ease;
+  -webkit-transition: width .6s ease;
+}
+
+.navbar a:hover:after {
+  width: 100%;
+  left: 0;
+  background: rgba(88, 88, 88, 0.9);
+}
+
+
+.logo {
+  height: 45px;
+}
+
+.nav-item {
   font-size: 20px;
 }
 
 .form-control {
-    background-color: rgba(255, 255, 255, 0.438);
+  background-color: rgba(255, 255, 255, 0.438);
 }
 
-h1{
-  z-index: -5000;
- text-align: center;
- margin: 90px auto 70px auto;
- font-family: 'bebas neue';
- color: white;
- font-weight: 600;
- font-size:6vd;
- letter-spacing: 1px;
- -webkit-transform: skew(63deg,-26.6deg);
-	-moz-transform: skew(63deg,-26.6deg);
-	-o-transform: skew(63deg,-26.6deg);
-	-ms-transform: skew(63deg,-26.6deg);
-	transform: skew(63deg,-25deg);
-	text-shadow: 0 0 3px rgba(0, 0, 128, 0.25);
-	z-index: 1000;
+h1 {
+
+  text-align: center;
+  margin: -50px auto 70px -2%;
+  font-family: 'bebas neue';
+  color: white;
+  font-weight: 600;
+  font-size: 35px;
+  letter-spacing: 1px;
+  -webkit-transform: skew(63deg, -26.6deg);
+  -moz-transform: skew(63deg, -26.6deg);
+  -o-transform: skew(63deg, -26.6deg);
+  -ms-transform: skew(63deg, -26.6deg);
+  transform: skew(63deg, -25deg);
+
+
 
 }
 
-h1 span{
+h1 span {
   transition: all 1s;
 }
 
-h1 span:hover{
-color: rgba(255, 255, 255, 0);
+h1 span:hover {
+  color: rgba(255, 255, 255, 0);
 }
 
-h2{
+h2 {
   text-align: center;
-  margin: -85px -80px 120px auto;
+  margin: -80px auto 120px 0.5%;
   font-family: 'bebas neue';
   color: white;
   font-weight: 600;
   font-size: 4vd;
   letter-spacing: 1px;
-  -webkit-transform: skew(-1deg,-26.6deg);
-	-moz-transform: skew(-1deg,-26.6deg);
-	-o-transform: skew(-1deg,-26.6deg);
-	-ms-transform: skew(-1deg,-26.6deg);
-	transform: skew(-1deg,-25deg);
+  -webkit-transform: skew(-1deg, -26.6deg);
+  -moz-transform: skew(-1deg, -26.6deg);
+  -o-transform: skew(-1deg, -26.6deg);
+  -ms-transform: skew(-1deg, -26.6deg);
+  transform: skew(-1deg, -25deg);
 
-	z-index: 1000;
- 
- }
+  z-index: 1000;
+
+}
 
 #scene {
-    overflow: hidden;
-    position: relative;
-    margin: -117px 0 0 0;
-    padding: 0;
-    background-size: contain;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  overflow: hidden;
+  position: relative;
+  margin: -50px 0 0 0;
+  padding: 0;
+  background-size: contain;
+  height: 104vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.section2{
-margin-top: 0vh;
+.section2 {
+  margin-top: 50px;
+  height: 100vh !important;
 }
-    
-article{
-    background-color: rgb(255, 255, 255);
-    padding: 65px;
-    margin: 30px auto 0 auto;
+
+.section2 img {
+  padding: 0 !important;
+  height: 50vh;
+  vertical-align: middle;
 }
-  
+
+article {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+h3 {
+  font-size: 24px;
+  margin: 80px 0 0 0;
+  font-family: roboto condensed;
+}
+
+h4 {
+  font-size: 24px;
+  padding-left: 100px;
+  margin: 80px 0 0 0;
+  font-family: roboto condensed;
+}
+
+p {
+  font-family: roboto condensed;
+  background-color: rgb(255, 255, 255);
+  vertical-align: middle;
+}
+
+.text_gauche {
+  padding-right: 100px;
+  margin: 40px auto 0 auto;
+}
+
+.text_droite {
+  padding-left: 100px;
+  margin: 40px auto 0 auto;
+}
+
 #scene img {
-    position: absolute;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
 }
 
-ul{
-    overflow: hidden;
+ul {
+  overflow: hidden;
 }
 
-.no_gout{
-    padding: 0!important;
+.no_gout {
+  padding: 0 !important;
 }
 
-#cadre_bouton{
-  margin: 30px auto 0 auto;
+#cadre_bouton {
+  margin: -110px -15px 0 auto;
 }
-.bouton_main{
+
+.bouton_main {
+  font-weight: bold;
   position: relative;
-    display: block;
-    margin: 5px auto;
-    z-index: 5000!important;
-    border: 1px solid white;
-    width: 300px;
-    height: 50px;
-    color: white;
-    background-color: rgba(255, 255, 255, 0);
-    font-size: 18px;
-    letter-spacing: 3px;
-    transition: all 1.4s;
-    
+  display: block;
+  margin: 5px auto;
+  z-index: 5000 !important;
+  border: 1px solid white;
+  width: 300px;
+  height: 50px;
+  color: white;
+  background-color: rgba(255, 255, 255, 0);
+  font-size: 18px;
+  letter-spacing: 3px;
+  transition: all 1.4s;
+
 }
 
-.bouton_main:hover{
-    border: none;
-    background-color: rgba(255, 255, 255, 0.589);
-    width: 100vw;
-    color: rgb(66, 66, 66) ;
+input{
+  outline: none;
 }
+
+.bouton_main:hover {
+  border: none;
+  background-color: rgba(255, 255, 255, 0.589);
+  width: 100vw;
+  color: rgb(66, 66, 66);
+}
+
+.bouton_second {
+  position: relative;
+  display: block;
+  margin: 60px 0 0 0px;
+  z-index: 5000 !important;
+  border: 1px solid rgb(36, 36, 36);
+  width: 205px;
+  height: 50px;
+  color: rgb(26, 26, 26);
+  background-color: rgba(255, 255, 255, 0);
+  font-size: 18px;
+  letter-spacing: 3px;
+
+  transition: all 0.4s;
+
+}
+
+.bouton_second:hover {
+  background-color: rgba(88, 88, 88, 0);
+  letter-spacing: 5px;
+
+}
+
+.petit {
+  -webkit-transform: skew(-1deg, -26.6deg);
+  -moz-transform: skew(-1deg, -26.6deg);
+  -o-transform: skew(-1deg, -26.6deg);
+  -ms-transform: skew(-1deg, -26.6deg);
+  transform: skew(-1deg, -25deg);
+}
+
+.moyen {
+  -webkit-transform: skew(-1deg, -26.6deg);
+  -moz-transform: skew(-1deg, -26.6deg);
+  -o-transform: skew(-1deg, -26.6deg);
+  -ms-transform: skew(-1deg, -26.6deg);
+  transform: skew(-1deg, -25deg);
+}
+
+.grand {
+  -webkit-transform: skew(-1deg, -26.6deg);
+  -moz-transform: skew(-1deg, -26.6deg);
+  -o-transform: skew(-1deg, -26.6deg);
+  -ms-transform: skew(-1deg, -26.6deg);
+  transform: skew(-1deg, -25deg);
+}
+
+/* @media (max-width: 1250px) { 
+h3 {
+  font-size: 140px;
+}
+  
+
+ } */
 
 .parapente {
-  z-index: 2500;
-    animation: 3s infinite alternate ease-in-out;
-  width: 100%;
-  height: 100%;
-    animation-name: slidein;
-  }
-  
-  @keyframes slidein {
-    from {
-      top: 0;
-      left: -35px;
-    }
-  
-    to {
-        top: -15px;
-        left: 0px;
-    }
+  z-index: 5;
+  animation: 3s infinite alternate ease-in-out;
+  width: 80%;
+  height: 80%;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    top: -50px;
+    left: -35px;
   }
 
-  .mont1 {
-    width: 140%!important;
-    height: 140%;
-
-    top: 0;
-    left: 0vw;
-    animation: 3s infinite alternate ease-in-out;
-
-    animation-name: mont1;
-  }
-  
-  @keyframes mont1 {
-    from {
-      top: -15vh;
-      left: -37vw;
-    }
-  
-    to {
-        top: -15vh;
-        left: -39vw;
-    }
-  }
-
-  .mont2 {
-      width: 130%!important;
-      height: 130%;
-    
-    left: 0;
-    animation: 3s infinite alternate ease-in-out;
-
-    animation-name: mont2;
-  }
-  
-  @keyframes mont2 {
-    from {
-      top: -110px;
-      left: 0vw;
-    }
-  
-    to {
-        top: -110px;
-        left: -1vw;
-    }
-  }
-
-  .mont3 {
-    width: 105%!important;
-    height: 105%;
-    top: 0;
+  to {
+    top: -45px;
     left: 0px;
-    animation: 3s infinite alternate ease-in-out;
-    
-    animation-name: mont3;
   }
-  
-  @keyframes mont3 {
-    from {
-      top: -15px;
-      left: -1.5vw;
-    }
-  
-    to {
-        top: -15px;
-        left: -1.0vw;
-    }
+}
+
+.mont1 {
+  width: 140% !important;
+  height: 140%;
+
+  top: 0;
+  left: 0vw;
+  animation: 3s infinite alternate ease-in-out;
+
+  animation-name: mont1;
+}
+
+@keyframes mont1 {
+  from {
+    top: -15vh;
+    left: -37vw;
   }
+
+  to {
+    top: -15vh;
+    left: -39vw;
+  }
+}
+
+.mont2 {
+  width: 130% !important;
+  height: 130%;
+
+  left: 0;
+  animation: 3s infinite alternate ease-in-out;
+
+  animation-name: mont2;
+}
+
+@keyframes mont2 {
+  from {
+    top: -110px;
+    left: 0vw;
+  }
+
+  to {
+    top: -110px;
+    left: -1vw;
+  }
+}
+
+.mont3 {
+  width: 105% !important;
+  height: 105%;
+  top: 0;
+  left: 0px;
+  animation: 3s infinite alternate ease-in-out;
+
+  animation-name: mont3;
+}
+
+@keyframes mont3 {
+  from {
+    top: -15px;
+    left: -1.5vw;
+  }
+
+  to {
+    top: -15px;
+    left: -1.0vw;
+  }
+}
 
 
 .mont5 {
-  width: 100%!important;
+  width: 100% !important;
   height: 100%;
-top: 50px!important;
-left: 0vw!important;
+  top: 50px !important;
+  left: 0vw !important;
 
 }
 
 .ciel {
-    width: 100%!important;
-    height: 100%;
- 
-  top: 50px!important;
+  width: 100% !important;
+  height: 100%;
+
+  top: 50px !important;
   left: 0;
-  
+
 }
 
 @media screen and (max-width: 640px) {
   #scene {
-  height: 60vh;
+    height: 60vh;
   }
 }
