--- a/style.css
+++ b/style.css
@@ -51,6 +51,16 @@
   background: rgba(88, 88, 88, 0.9);
 }
 
+.icon_social a{
+  font-size: 25px;
+  color: rgb(145, 145, 145);
+}
+
+.icon_social a:hover{
+  transform: rotate(5deg);
+  color: rgb(49, 49, 49);
+}
+
 .sticky {
   position: fixed;
   top: 0;
@@ -121,23 +131,12 @@ h3 {
 
 h4 {
   font-size: 24px;
-  padding-left: 100px;
+  padding-left: 00px;
   margin: 80px 0 0 0;
   font-family: roboto condensed;
 }
 
-#scene {
-  overflow: hidden;
-  position: relative;
-  margin: -50px 0 0 0;
-  padding: 0;
-  background-size: contain;
-  height: 104vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 
 /* .section2 {
   color: rgb(49, 49, 49);
@@ -198,11 +197,22 @@ p {
   padding: 0;
 }
 
-#scene img {
-  position: absolute;
-  top: 0;
-  left: 0;
+
+.section_bas{
+  margin-top: 60px;
+}
+
+.section_bas img{
+  padding: 0;
   width: 100%;
+}
+
+.section_bas div {
+  padding: 0;
+}
+
+.photo-resp{
+  display: none;
 }
 
 ul {
@@ -315,6 +325,26 @@ input{
 
 }
 
+#scene {
+  overflow: hidden;
+  position: relative;
+  margin: -50px 0 0 0;
+  padding: 0;
+  background-size: contain;
+  height: 104vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#scene img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
 .petit {
   -webkit-transform: skew(-1deg, -26.6deg);
   -moz-transform: skew(-1deg, -26.6deg);
@@ -339,13 +369,66 @@ input{
   transform: skew(-1deg, -25deg);
 }
 
-.image_colonne{
-  text-align: end;
-}
-
 footer{
   margin: 90px 0 0 0;
   padding:30px 0;
+  list-style: none;
+}
+
+footer a {
+  position: relative;
+  color: white;
+}
+
+footer a::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 1px;
+  display: block;
+  margin-top: 1px;
+  right: 0;
+  background: rgb(255, 255, 255);
+  transition: width .6s ease;
+  -webkit-transition: width .6s ease;
+}
+
+footer a:hover:after {
+  width: 100%;
+  left: 0;
+  background: rgba(255, 255, 255, 0.9);
+}
+
+footer a:hover{
+  color: white;
+  text-decoration: none!important;
+}
+
+footer img{
+  width: 100%;
+}
+
+footer p{
+  font-size: 12px;
+  color: white;
+}
+
+footer i{
+  font-size: 25px;
+  margin: 0 0 0px 0;
+}
+
+.foot-gauche li{
+  font-size: 12px;
+  margin: 10px 0;
+}
+
+.foot-milieu a{
+  font-size: 12px;
+}
+
+.foot-milieu p{
+  margin: 0 3px 0 0 ; 
 }
 
 /* @media (max-width: 1250px) { 
@@ -502,11 +585,29 @@ h3 {
     font-size: 28px;
   }
 
+  
+  h4{
+    font-size: 28px;
+  }
+
   .text{
     padding: 0 30px;
     font-size: 26px!important;
   }
 
+  .section_bas{
+    padding: 0 30px;
+    font-size: 26px!important;
+  }
+
+  .photo-large{
+    display: none;
+  }
+
+  .photo-resp{
+    display: inherit;
+  }
+  
   #scene{
     height: 90vh!important;
   }
